--- a/Latex/references.bib
+++ b/Latex/references.bib
@@ -150,12 +150,15 @@ doi = {10.48550/arXiv.1712.00303}
         title = "{Radiative processes in astrophysics}",
          year = 1979,
        adsurl = {https://ui.adsabs.harvard.edu/abs/1979rpa..book.....R},
-      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+    publisher = {Wiley Vch}
 }
 
 @unpublished{taboneinprepp,
     author = {Tabone and others},
-    year = {in prep.}
+    year = {in prep.},
+    note = {}
+
 }
 
 @misc{henning2024mindsjwstmirimidinfrared,
@@ -179,3 +182,23 @@ doi = {10.48550/arXiv.1712.00303}
    author={Argyriou, Ioannis and Glasse, Alistair and Law, David R. and Labiano, Alvaro and Álvarez-Márquez, Javier and Patapis, Polychronis and Kavanagh, Patrick J. and Gasman, Danny and Mueller, Michael and Larson, Kirsten and Vandenbussche, Bart and Glauser, Adrian M. and Royer, Pierre and Dicken, Daniel and Harkett, Jake and Sargent, Beth A. and Engesser, Michael and Jones, Olivia C. and Kendrew, Sarah and Noriega-Crespo, Alberto and Brandl, Bernhard and Rieke, George H. and Wright, Gillian S. and Lee, David and Wells, Martyn},
    year={2023},
    month=jul, pages={A111} }
+
+@mastersthesis{groningenthesis,
+    author = {Thomas Smeman},
+    title = {Discovering SO$_2$ in JWST MIRI MRS spectra of protoplanetary disks},
+    school = {University of Groningen},
+    year = {2024},
+    type = {Bachelor's thesis}
+}
+
+@article{van_Gelder_2024,
+   title={JWST Observations of Young protoStars (JOYS): Overview of gaseous molecular emission and absorption in low-mass protostars},
+   volume={692},
+   ISSN={1432-0746},
+   url={http://dx.doi.org/10.1051/0004-6361/202451967},
+   DOI={10.1051/0004-6361/202451967},
+   journal={Astronomy &amp; Astrophysics},
+   publisher={EDP Sciences},
+   author={van Gelder, M. L. and Francis, L. and van Dishoeck, E. F. and Tychoniec, Ł. and Ray, T. P. and Beuther, H. and Caratti o Garatti, A. and Chen, Y. and Devaraj, R. and Gieser, C. and Justtanont, K. and Kavanagh, P. J. and Nazari, P. and Reyes, S. and Rocha, W. R. M. and Slavicinska, K. and Güdel, M. and Henning, Th. and Lagage, P.-O. and Wright, G.},
+   year={2024},
+   month=dec, pages={A197} }
