--- a/SimulatedData.ipynb
+++ b/SimulatedData.ipynb
@@ -3,8 +3,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-15T22:30:41.115017Z",
-     "start_time": "2025-05-15T22:30:41.111932Z"
+     "end_time": "2025-06-01T15:33:56.276748Z",
+     "start_time": "2025-06-01T15:33:55.050131Z"
     }
    },
    "cell_type": "code",
@@ -20,13 +20,13 @@
    ],
    "id": "c46c4eb1114c8f3b",
    "outputs": [],
-   "execution_count": 2
+   "execution_count": 1
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-15T22:30:44.045993Z",
-     "start_time": "2025-05-15T22:30:44.039405Z"
+     "end_time": "2025-06-01T15:33:56.295470Z",
+     "start_time": "2025-06-01T15:33:56.287417Z"
     }
    },
    "cell_type": "code",
@@ -108,13 +108,13 @@
    ],
    "id": "71ed785b81c0e2c3",
    "outputs": [],
-   "execution_count": 3
+   "execution_count": 2
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-15T22:30:45.603909Z",
-     "start_time": "2025-05-15T22:30:45.206016Z"
+     "end_time": "2025-06-01T15:34:01.000587Z",
+     "start_time": "2025-06-01T15:34:00.349526Z"
     }
    },
    "cell_type": "code",
@@ -142,7 +142,7 @@
      ]
     }
    ],
-   "execution_count": 4
+   "execution_count": 3
   },
   {
    "metadata": {},
@@ -194,10 +194,13 @@
    "id": "19e503e491beac46"
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-06-01T15:34:23.489677Z",
+     "start_time": "2025-06-01T15:34:23.483979Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
     "def new_detect_molecule(wavelength, spectrum, specie_spectrum, clip_min=4.9, clip_max=27.5, peak_shift=0, window=300,\n",
     "                    exclude=20, title=None, plot=False, n_trials=1000):\n",
@@ -269,13 +272,15 @@
     "        # plt.show()\n",
     "    return p"
    ],
-   "id": "49eceb9341af76d1"
+   "id": "49eceb9341af76d1",
+   "outputs": [],
+   "execution_count": 4
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-15T22:33:23.173788Z",
-     "start_time": "2025-05-15T22:33:22.972783Z"
+     "end_time": "2025-06-01T15:40:23.342438Z",
+     "start_time": "2025-06-01T15:40:23.154637Z"
     }
    },
    "cell_type": "code",
@@ -297,7 +302,7 @@
    ],
    "id": "3f5df338995c0006",
    "outputs": [],
-   "execution_count": 5
+   "execution_count": 6
   },
   {
    "metadata": {
@@ -313,7 +318,7 @@
     "target = 'H2O'\n",
     "total_wl = np.linspace(4.9, 27.5, 10000)\n",
     "# plt.figure(figsize=(16, 5))\n",
-    "clip_min, clip_max = 6, 6.5\n",
+    "clip_min, clip_max = 4.9, 27.5\n",
     "for target in species:\n",
     "    for i, row in df.iterrows():\n",
     "        if i != 16:\n",
@@ -751,6 +756,134 @@
    "execution_count": null,
    "source": "",
    "id": "7305cd2dfcfaa92c"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-06-01T17:35:09.536979Z",
+     "start_time": "2025-06-01T17:07:16.950014Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "species = ['NH3']\n",
+    "# species.append('NH3')\n",
+    "target = 'H2O'\n",
+    "total_wl = np.linspace(4.9, 27.5, 10000)\n",
+    "# plt.figure(figsize=(16, 5))\n",
+    "clip_min, clip_max = 4.9, 27.5\n",
+    "n_runs = 100\n",
+    "for target in species:\n",
+    "    for i, row in df.iterrows():\n",
+    "        print(row['CO Value'], '------------')\n",
+    "        positives = 0\n",
+    "        for _ in range(n_runs):\n",
+    "            # plt.figure(figsize=(16, 5))\n",
+    "            wavelength = row['FLiTs Wavelength']\n",
+    "            flux_cont_sub = row['FLiTs Flux']\n",
+    "            continuum = row['FLiTs Flux Continuum']\n",
+    "            NH3_wl = row['FLiTs NH3 Wavelength']\n",
+    "            NH3_flux = row['FLiTs NH3 Flux']\n",
+    "            NH3_flux = np.interp(total_wl, NH3_wl, NH3_flux)\n",
+    "            flux_cont_sub = np.interp(total_wl, wavelength, flux_cont_sub) + NH3_flux\n",
+    "            continuum = np.interp(total_wl, wavelength, continuum)\n",
+    "            noise = add_noise(flux_cont_sub + continuum, SNR=300) - continuum - flux_cont_sub\n",
+    "            real_wl = row[f'FLiTs {target} Wavelength']\n",
+    "            real_flux = row[f'FLiTs {target} Flux']\n",
+    "            noise_flux = np.interp(total_wl, real_wl, real_flux) + noise\n",
+    "            target_flux = avg_flux[target]\n",
+    "            # plt.plot(total_wl, flux_cont_sub*1000, c='black', label='Total Spectrum')\n",
+    "            # plt.plot(total_wl, (noise_flux)*1000, c=colors[target], label=f'{target} Emission')\n",
+    "            # plt.title(f'C/O>1')\n",
+    "            # plt.axhline(0, color='grey', linestyle='--', linewidth=1)\n",
+    "            # plt.xlim(clip_min, clip_max)\n",
+    "            # plt.ylim(-2, 3)\n",
+    "            # plt.xlabel(r'Wavelength [$\\mu$m]')\n",
+    "            # plt.ylabel('Flux [mJy]')\n",
+    "            # plt.legend(loc='upper right')\n",
+    "            # plt.show()\n",
+    "            # print(target + ' total spectrum: ', new_detect_molecule(total_wl, flux_cont_sub, target_flux, clip_min=clip_min, clip_max=clip_max, peak_shift=0,\n",
+    "            #                 window=100,\n",
+    "            #                 exclude=99, title=f'{target}Present', plot=False)<0.05)\n",
+    "            # plt.savefig('Figures/Cross-Correlation.pdf', bbox_inches='tight')\n",
+    "            # plt.show()\n",
+    "            if new_detect_molecule(total_wl, noise_flux, target_flux, clip_min=clip_min, clip_max=clip_max,\n",
+    "                            peak_shift=0, window=100,\n",
+    "                            exclude=99, title=f'{target}Not Present', plot=False)<0.05:\n",
+    "                # print(target + ' noise: ', True )\n",
+    "                positives += 1\n",
+    "            # else:\n",
+    "                # print(target + ' noise: ', False )\n",
+    "        print(positives/n_runs*100, '% positive')    # plt.show()"
+   ],
+   "id": "6664cbfabb7bfdc7",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.45 ------------\n",
+      "26.0 % positive\n",
+      "0.2570 ------------\n",
+      "32.0 % positive\n",
+      "0.145 ------------\n",
+      "28.999999999999996 % positive\n",
+      "0.0813 ------------\n",
+      "32.0 % positive\n",
+      "0.045 ------------\n",
+      "27.0 % positive\n",
+      "0.813 ------------\n",
+      "21.0 % positive\n",
+      "0.45 ------------\n",
+      "25.0 % positive\n",
+      "0.257 ------------\n",
+      "26.0 % positive\n",
+      "0.145 ------------\n",
+      "27.0 % positive\n",
+      "0.0813 ------------\n",
+      "22.0 % positive\n",
+      "1.445 ------------\n",
+      "17.0 % positive\n",
+      "0.813 ------------\n",
+      "25.0 % positive\n",
+      "0.45 ------------\n",
+      "32.0 % positive\n",
+      "0.257 ------------\n",
+      "28.999999999999996 % positive\n",
+      "0.145 ------------\n",
+      "23.0 % positive\n",
+      "2.570 ------------\n",
+      "21.0 % positive\n",
+      "1.445 ------------\n",
+      "25.0 % positive\n",
+      "0.813 ------------\n",
+      "26.0 % positive\n",
+      "0.45 ------------\n",
+      "16.0 % positive\n",
+      "0.2570 ------------\n",
+      "19.0 % positive\n",
+      "4.57 ------------\n",
+      "24.0 % positive\n",
+      "2.570 ------------\n",
+      "17.0 % positive\n",
+      "1.445 ------------\n",
+      "15.0 % positive\n",
+      "0.813 ------------\n",
+      "23.0 % positive\n",
+      "0.45 ------------\n",
+      "24.0 % positive\n"
+     ]
+    }
+   ],
+   "execution_count": 20
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "5b6f7b01db97904b"
   }
  ],
  "metadata": {
